# key-macro

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/key_macro_studio/: executor.py  keymap.py  models.py  profile_store.py  ui.py
tests/: test_models_executor.py
