[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "key-macro-studio"
version = "0.1.0"
description = "Desktop keyboard macro editor with per-key timing"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "pynput>=1.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
